--- a/flexbox.html
+++ b/flexbox.html
@@ -61,6 +61,7 @@
         <header class="header">Header</header>
         <main class="main">Main</main>
         <footer class="footer">Footer</footer>
+        <footer class="footer">Footer</footer>
     </div>
 </body>
 </html>
